// =============================================================
// Sovereign Workforce Database Schema Fragment (Single Source of Truth)
// Module: @alsaada/module-workforce
// Governed by Work Plan 117 (Sovereign Modular Database Emancipation)
// =============================================================

model Department {
  id          String   @id @default(uuid())
  code        String   @unique // e.g. DEP-OPS, DEP-SEC, DEP-MNT
  name        String
  description String?
  isActive    Boolean  @default(true)
  sortOrder   Int      @default(0)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  jobTitles JobTitle[]
  workers   Worker[]

  @@map("departments")
}

model JobTitle {
  id                    String   @id @default(uuid())
  departmentId          String
  code                  String   @unique // e.g. JOB-DRV, JOB-HLP, JOB-ENG
  title                 String
  category              String // ADMINISTRATIVE, TECHNICAL, OPERATIONAL, SECURITY, LOGISTICS
  standardWorkingHours  Decimal  @default(10) @db.Decimal(5, 2)
  overtimeHourRateRatio Decimal  @default(1.5) @db.Decimal(4, 2)
  sortOrder             Int      @default(0)
  isActive              Boolean  @default(true)
  createdAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt

  department    Department         @relation(fields: [departmentId], references: [id])
  salaryHistory JobSalaryHistory[]
  workers       Worker[]

  @@index([departmentId])
  @@map("job_titles")
}

model JobSalaryHistory {
  id            String   @id @default(uuid())
  jobTitleId    String
  minDailyWage  Decimal  @db.Decimal(12, 2)
  maxDailyWage  Decimal  @db.Decimal(12, 2)
  effectiveDate DateTime @default(now())
  changedBy     BigInt?
  reason        String?
  createdAt     DateTime @default(now())

  jobTitle JobTitle @relation(fields: [jobTitleId], references: [id], onDelete: Cascade)

  @@index([jobTitleId, effectiveDate])
  @@map("job_salary_histories")
}

model CycleTransitionHistory {
  id           String    @id @default(uuid())
  workerId     String
  fromCycle    String
  toCycle      String
  transferDate DateTime  @default(now())
  authorizedBy BigInt?
  notes        String?
  isHistorical Boolean   @default(false)
  restDaysDue  Int       @default(0)
  resumedAt    DateTime?
  createdAt    DateTime  @default(now())

  @@index([workerId, transferDate])
  @@map("cycle_transition_histories")
}

model ShiftCycleTemplate {
  id                  String   @id @default(uuid())
  code                String   @unique // e.g. 24_WORK_6_REST
  name                String
  workDays            Int      @default(24)
  restDays            Int      @default(6)
  travelDaysAllowance Int      @default(2)
  dailyWorkHours      Decimal  @default(10) @db.Decimal(4, 2)
  isDefault           Boolean  @default(false)
  createdAt           DateTime @default(now())
  updatedAt           DateTime @updatedAt

  @@map("shift_cycle_templates")
}

model Worker {
  id                      String    @id @default(uuid())
  code                    String    @unique // Active structured code (e.g. OP-DRV-0042)
  legacyCode              String? // Historical / legacy code (e.g. "106", "101")
  aliases                 String[] // Historical & legacy codes (e.g. ["106", "101", "OP-HLP-0015"])
  name                    String
  nickname                String?
  idType                  String    @default("NATIONAL_ID") // NATIONAL_ID, PASSPORT
  nationality             String    @default("مصر")
  nationalIdEncrypted     String?
  nationalIdBlindIndex    String?   @unique
  passportNumberEncrypted String?
  passportBlindIndex      String?   @unique
  birthDate               DateTime
  gender                  String // MALE, FEMALE
  governorateCode         String    @default("88")
  jobTitle                String
  departmentId            String?
  jobTitleId              String?
  siteId                  String?
  hireDate                DateTime  @default(now())
  contractType            String    @default("PERMANENT") // DAILY_LABOR, SEASONAL, PERMANENT
  shiftSystem             String    @default("24_WORK_6_REST")
  dailyWage               Decimal   @db.Decimal(12, 2)
  basicSalary             Decimal   @default(0) @db.Decimal(12, 2)
  additionalSalary        Decimal   @default(0) @db.Decimal(12, 2)
  fixedAllowances         Decimal   @default(0) @db.Decimal(12, 2)
  paymentMethod           String    @default("CASH_SITE") // CASH_SITE, VODAFONE_CASH, INSTAPAY, BANK_TRANSFER
  accountNumberEncrypted  String?
  walletType              String? // e.g. "محفظة فودافون كاش", "إنستاباي"
  canteenCigarettePolicy  String    @default("NONE") // ONE_PACK_DAILY, FULL_COVERAGE, NONE, CUSTOM
  cigaretteBrand          String?
  canteenItemId           String? // Loose ID reference to Canteen
  walletOwnerName         String?
  instaPayHandle          String?
  insuranceNumber         String?
  insuranceStatus         String?
  ppeShoeSize             String?
  ppeUniformSize          String?
  medicalNotes            String?
  barracksUnit            String?
  bedNumber               String?
  phoneEncrypted          String?
  phoneBlindIndex         String?
  emergencyContactName    String?
  emergencyPhoneEncrypted String?
  drivingLicense          String?
  militaryStatus          String?
  maritalStatus           String?
  previousInsuranceStatus String?
  idCardFrontPath         String?
  idCardBackPath          String?
  idCardExpiryDate        DateTime?
  idCardExpiryAlertSentAt DateTime?
  address                 String?
  telegramId              BigInt?   @unique
  status                  String    @default("ACTIVE") // ACTIVE, ON_LEAVE, TERMINATED, RESIGNED
  terminationDate         DateTime?
  terminationReason       String?
  isDeleted               Boolean   @default(false)
  deletedAt               DateTime?
  deletedBy               BigInt?
  createdAt               DateTime  @default(now())
  updatedAt               DateTime  @updatedAt

  department             Department?             @relation(fields: [departmentId], references: [id])
  jobRef                 JobTitle?               @relation(fields: [jobTitleId], references: [id])
  site                   Site?                   @relation(fields: [siteId], references: [id])
  user                   User?
  salaryHistories        SalaryHistory[]
  changeLogs             WorkerChangeLog[]
  customAllowances       WorkerCustomAllowance[]
  ppeAssets              PPEAsset[]
  disciplinaryAndBonuses DisciplinaryAndBonus[]
  clearance              WorkerClearance?
  balanceSnapshot        WorkerBalanceSnapshot?
  leaves                 Leave[]
  leaveAllowances        LeaveAllowance[]
  ledgers                FinancialLedger[]
  advanceRequests        AdvanceRequest[]
  advanceInstallments    AdvanceInstallment[]
  editRequests           WorkerEditRequest[]
  documents              WorkerDocument[]
  commitmentScores       WorkerCommitmentScore[]

  @@index([phoneBlindIndex])
  @@index([status])
  @@index([isDeleted])
  @@index([legacyCode])
  @@index([idCardExpiryDate])
  @@index([siteId, status])
  @@index([jobTitleId])
  @@index([departmentId])
  @@map("workers")
}

model WorkerDocument {
  id                    String    @id @default(uuid())
  workerId              String
  docType               String // ID_CARD_FRONT, ID_CARD_BACK, DRIVING_LICENSE, CRIMINAL_RECORD, DRUG_TEST, CONTRACT, MEDICAL_REPORT, RESIGNATION_FORM, OTHER
  title                 String
  fileUri               String
  sha256Checksum        String?
  fileSizeBytes         BigInt?
  mimeType              String?
  issueDate             DateTime?
  expiryDate            DateTime?
  alertDaysBeforeExpiry Int       @default(30)
  verifiedByUserId      BigInt?
  isVerified            Boolean   @default(false)
  notes                 String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  worker Worker @relation(fields: [workerId], references: [id], onDelete: Cascade)

  @@index([workerId, docType])
  @@index([expiryDate])
  @@map("worker_documents")
}

model WorkerEditRequest {
  id               String    @id @default(uuid())
  workerId         String
  field            String
  oldValue         String?
  newValue         String
  reason           String?
  status           String    @default("PENDING") // PENDING, APPROVED, REJECTED
  requestedBy      BigInt
  reviewedBy       BigInt?
  reviewedAt       DateTime?
  rejectionReason  String?
  evidencePhotoUri String?
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  worker Worker @relation(fields: [workerId], references: [id], onDelete: Cascade)

  @@index([workerId, status])
  @@index([status])
  @@map("worker_edit_requests")
}

model SalaryHistory {
  id                   String    @id @default(uuid())
  workerId             String
  previousDailyWage    Decimal   @db.Decimal(12, 2)
  newDailyWage         Decimal   @db.Decimal(12, 2)
  previousBasicSalary  Decimal   @default(0) @db.Decimal(12, 2)
  newBasicSalary       Decimal   @default(0) @db.Decimal(12, 2)
  previousAdditional   Decimal   @default(0) @db.Decimal(12, 2)
  newAdditional        Decimal   @default(0) @db.Decimal(12, 2)
  effectiveDate        DateTime  @default(now())
  reason               String // ANNUAL_INCREASE, PROMOTION, EVALUATION_ADJUSTMENT, PENALTY_DEMOTION, CONTRACT_RENEWAL
  notes                String?
  authorizedByUserId   BigInt?
  letterApprovalDocUri String?
  isApproved           Boolean   @default(true)
  approvedAt           DateTime?
  createdAt            DateTime  @default(now())

  worker Worker @relation(fields: [workerId], references: [id], onDelete: Cascade)

  @@index([workerId, effectiveDate])
  @@map("salary_histories")
}

model WorkerChangeLog {
  id          String   @id @default(uuid())
  workerId    String
  changeType  String // STATUS_CHANGE, SHIFT_SYSTEM, DAILY_WAGE, DEPARTMENT, JOB_TITLE, SITE_TRANSFER
  fieldName   String
  oldValue    String?
  newValue    String?
  changedBy   BigInt
  reason      String?
  effectiveAt DateTime @default(now())
  createdAt   DateTime @default(now())

  worker Worker @relation(fields: [workerId], references: [id], onDelete: Cascade)

  @@index([workerId, changeType])
  @@index([effectiveAt])
  @@map("worker_change_logs")
}

model WorkerCustomAllowance {
  id          String    @id @default(uuid())
  workerId    String
  name        String
  amount      Decimal   @db.Decimal(10, 2)
  isRecurring Boolean   @default(true)
  effectiveAt DateTime  @default(now())
  expiresAt   DateTime?
  createdAt   DateTime  @default(now())

  worker Worker @relation(fields: [workerId], references: [id], onDelete: Cascade)

  @@index([workerId])
  @@map("worker_custom_allowances")
}

model PPEAsset {
  id               String    @id @default(uuid())
  workerId         String
  siteId           String
  itemType         String // VEST, HELMET, BOOTS, GLOVES, GLASSES, HARNESS
  serialNumber     String?
  condition        String    @default("NEW") // NEW, GOOD, DAMAGED, LOST
  assignedAt       DateTime  @default(now())
  returnedAt       DateTime?
  deductionApplied Decimal   @default(0) @db.Decimal(10, 2)
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  worker Worker @relation(fields: [workerId], references: [id])
  site   Site   @relation(fields: [siteId], references: [id])

  @@index([workerId])
  @@index([siteId])
  @@map("ppe_assets")
}

model DisciplinaryAndBonus {
  id                 String    @id @default(uuid())
  workerId           String
  type               String // BONUS, PENALTY_DAYS, WARNING, DEDUCTION_AMOUNT
  category           String // ATTENDANCE_ABSENCE, SAFETY_VIOLATION, PERFORMANCE, EXCEPTIONAL_WORK, DAMAGE_TO_EQUIPMENT
  amountOrDays       Decimal   @db.Decimal(10, 2)
  description        String
  incidentDate       DateTime
  authorizedByUserId BigInt
  payrollMonth       String?
  isAppliedToPayroll Boolean   @default(false)
  appliedAt          DateTime?
  createdAt          DateTime  @default(now())

  worker Worker @relation(fields: [workerId], references: [id])

  @@index([workerId, isAppliedToPayroll])
  @@index([incidentDate])
  @@map("disciplinary_and_bonuses")
}

model WorkerClearance {
  id                 String    @id @default(uuid())
  clearanceNumber    String    @unique // e.g. #CLR-YYYY-XXXX
  workerId           String    @unique
  reason             String // RESIGNATION, TERMINATION, CONTRACT_END, MEDICAL_INCAPACITY, ABANDONMENT_AWOL
  terminationDate    DateTime
  finalWorkDay       DateTime
  remainingDaysWage  Decimal   @default(0) @db.Decimal(12, 2)
  leaveBalanceRefund Decimal   @default(0) @db.Decimal(12, 2)
  unpaidAdvancesDue  Decimal   @default(0) @db.Decimal(12, 2)
  canteenDebtDue     Decimal   @default(0) @db.Decimal(12, 2)
  damagePenaltiesDue Decimal   @default(0) @db.Decimal(12, 2)
  endOfServiceBonus  Decimal   @default(0) @db.Decimal(12, 2)
  netSettlementTotal Decimal   @db.Decimal(12, 2)
  status             String    @default("PENDING_DEPARTMENT_SIGNS") // PENDING_DEPARTMENT_SIGNS, APPROVED_BY_MANAGEMENT, DISBURSED, ARCHIVED
  settledAt          DateTime?
  disbursedByUserId  BigInt?
  payoutMethod       String    @default("CASH_ENVELOPE")
  payoutReference    String?
  clearanceSheetUri  String?
  sha256Checksum     String?
  recordHash         String    @default("") @map("record_hash")
  previousHash       String?   @map("previous_hash")
  hashTimestamp      DateTime  @default(now()) @map("hash_timestamp")
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt

  worker Worker @relation(fields: [workerId], references: [id])

  @@index([recordHash])
  @@index([previousHash])
  @@index([hashTimestamp])
  @@map("worker_clearances")
}

model WorkerBalanceSnapshot {
  id                   String   @id @default(uuid())
  workerId             String   @unique
  outstandingAdvances  Decimal  @default(0) @db.Decimal(12, 2)
  canteenUnsettledDebt Decimal  @default(0) @db.Decimal(12, 2)
  netAccruedEarnings   Decimal  @default(0) @db.Decimal(12, 2)
  unsettledCustodyDebt Decimal  @default(0) @db.Decimal(12, 2)
  lastCalculatedAt     DateTime @default(now())
  updatedAt            DateTime @updatedAt

  worker Worker @relation(fields: [workerId], references: [id], onDelete: Cascade)

  @@index([lastCalculatedAt])
  @@map("worker_balance_snapshots")
}

model WorkerCommitmentScore {
  id               String   @id @default(uuid())
  workerId         String
  siteId           String
  monthYear        String // YYYY-MM
  attendanceRatio  Decimal  @db.Decimal(5, 2)
  safetyScore      Decimal  @db.Decimal(5, 2)
  supervisorsScore Decimal  @db.Decimal(5, 2)
  compositeIndex   Decimal  @db.Decimal(5, 2)
  isEligibleBonus  Boolean  @default(false)
  createdAt        DateTime @default(now())

  worker Worker @relation(fields: [workerId], references: [id])
  site   Site   @relation(fields: [siteId], references: [id])

  @@unique([workerId, monthYear])
  @@index([siteId, monthYear])
  @@map("worker_commitment_scores")
}

model Leave {
  id                    String    @id @default(uuid())
  leaveNumber           String    @unique // e.g. #LV-YYYY-XXXX
  workerId              String
  siteId                String
  leaveType             String    @default("ANNUAL") // ANNUAL, CASUAL, MISSION, SICK, UNPAID
  requestDate           DateTime  @default(now())
  departureDate         DateTime
  expectedReturnDate    DateTime
  actualReturnDate      DateTime?
  status                String    @default("PENDING") // PENDING, APPROVED, REJECTED, ACTIVE_ON_LEAVE, RESUMED, OVERDUE
  overdueDays           Int       @default(0)
  penaltyDaysCalculated Decimal   @default(0) @db.Decimal(6, 2)
  deductionAmount       Decimal   @default(0) @db.Decimal(12, 2)
  isOverstayPardoned    Boolean   @default(false)
  overstayPardonReason  String?
  supervisorNotes       String?
  approvedByUserId      BigInt?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  worker     Worker           @relation(fields: [workerId], references: [id])
  site       Site             @relation(fields: [siteId], references: [id])
  allowances LeaveAllowance[]

  @@index([workerId, status])
  @@index([siteId, departureDate])
  @@map("leaves")
}

model LeaveAllowance {
  id                     String   @id @default(uuid())
  leaveId                String
  workerId               String
  travelStipend          Decimal  @db.Decimal(10, 2)
  disbursedFromCustodyId String?  // Loose ID reference to Custody
  disbursementDate       DateTime @default(now())
  voucherNumber          String?
  createdAt              DateTime @default(now())

  leave  Leave  @relation(fields: [leaveId], references: [id])
  worker Worker @relation(fields: [workerId], references: [id])

  @@map("leave_allowances")
}

model AdvanceRequest {
  id                 String    @id @default(uuid())
  requestNumber      String    @unique // e.g. #ADV-YYYY-XXXX
  workerId           String
  siteId             String?
  amountRequested    Decimal   @db.Decimal(12, 2)
  amountApproved     Decimal?  @db.Decimal(12, 2)
  purpose            String
  status             String    @default("PENDING") // PENDING, APPROVED, REJECTED, DISBURSED, CANCELLED
  rejectionReason    String?
  approvedByUserId   BigInt?
  disbursedAt        DateTime?
  monthlyInstallment Decimal?  @db.Decimal(10, 2)
  installmentCount   Int       @default(1)
  remainingBalance   Decimal   @default(0) @db.Decimal(12, 2)
  createdAt          DateTime  @default(now())
  updatedAt          DateTime  @updatedAt

  worker Worker @relation(fields: [workerId], references: [id])
  site   Site?  @relation(fields: [siteId], references: [id])

  @@index([workerId, status])
  @@index([siteId, createdAt])
  @@map("advance_requests")
}

model AdvanceInstallment {
  id                    String    @id @default(uuid())
  workerId              String
  originalVoucherNumber String
  installmentSequence   Int
  dueMonth              String // YYYY-MM
  installmentAmount     Decimal   @db.Decimal(12, 2)
  actualDeductedAmount  Decimal   @default(0) @db.Decimal(12, 2)
  status                String    @default("SCHEDULED") // SCHEDULED, DEDUCTED_FULL, DEDUCTED_PARTIAL, POSTPONED, WAIVED
  payrollRunId          String?   // Loose ID reference to Payroll
  deductedAt            DateTime?
  notes                 String?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  worker          Worker           @relation(fields: [workerId], references: [id])
  financialLedger FinancialLedger? @relation(fields: [originalVoucherNumber], references: [voucherNumber])

  @@index([workerId, dueMonth])
  @@index([status])
  @@map("advance_installments")
}
